package(default_visibility = ["//visibility:public"])
load("@io_bazel_rules_scala//scala:scala_import.bzl", "scala_import",)

scala_import(
    name = "B",
    exports = [
        "//B/src/main/scala/com/comp/b1",
        "//B/src/main/scala/com/comp/b2",
        "//B/src/main/scala/com/comp/b3",
    ]
)